spec for rate
